--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "feather-icons": "^4.29.1",
     "feather-icons-react": "^0.6.2",
     "moment": "^2.29.4",
@@ -16,6 +17,7 @@
     "react-feather": "^2.0.10",
     "react-modal": "^3.16.1",
     "react-moment": "^1.1.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -43,5 +45,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-named-exports-order": "^0.0.2",
+    "eslint-plugin-storybook": "^0.6.15",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.4.6",
+    "webpack": "^5.88.2"
   }
 }
